--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "babel-core": "^6.2.1",
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.20.0",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.3.13",
     "chai": "^3.4.1",
     "chai-as-promised": "^5.1.0",
@@ -50,10 +50,12 @@
     "css": "styles"
   },
   "dependencies": {
+    "audio-buffer-utils": "5.1.2",
     "event-emitter": "^0.3.4",
     "fade-curves": "^1.0.2",
     "fade-maker": "^1.0.3",
     "inline-worker": "^1.1.0",
+    "json-loader": "0.5.7",
     "lodash.assign": "^4.0.0",
     "lodash.defaultsdeep": "^4.6.1",
     "lodash.forown": "^4.0.0",
