--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "lodash.assign": "^4.0.0",
     "lodash.defaultsdeep": "^4.6.1",
     "lodash.forown": "^4.0.0",
+    "lodash.keys": "^4.0.0",
     "mucss": "^1.1.5",
     "uuid": "^2.0.1",
     "virtual-dom": "^2.1.1",
